--- a/PayMe/PayMe/Views/Tasks/Index.cshtml
+++ b/PayMe/PayMe/Views/Tasks/Index.cshtml
@@ -17,11 +17,11 @@
     }
 
     function ActionEdit(value) {
-        return '<a href="../Tasks/Edit/' + value + '"><em class="fa fa-pencil-square" style="font-size:18px;color:dodgerblue"></a>';
+        return '<a href="../Tasks/Edit/' + value + '"><em class="fa fa-pencil" style="font-size:18px;"></a>';
     }
     function ActionDelete(value) {
       
-        return '<a onclick="return confirm_click();" href="../Tasks/Delete/' + value + ' "><em class="fa fa-trash"  style="font-size:18px;color:red"></a>';
+        return '<a onclick="return confirm_click();" href="../Tasks/Delete/' + value + ' "><em class="fa fa-trash"  style="font-size:18px;"></a>';
               
     }
     function confirm_click(value) {
