--- a/PayMe/PayMe/Views/Employee/Index.cshtml
+++ b/PayMe/PayMe/Views/Employee/Index.cshtml
@@ -14,7 +14,10 @@
             });
         });
     });
-   
+
+    function ActionEdit(value) {
+        return '<a href="../Employee/Edit/' + value + '"><em class="fa fa-pencil" style="font-size:18px;"></a>';
+    }
 </script>
 <div class="row">
     <ol class="breadcrumb">
@@ -46,6 +49,7 @@
                             <th data-field="GenderName" data-sortable="true">Gender</th>
                             <th data-field="EmailID" data-sortable="true">Email</th>
                             <th data-field="RoleName" data-sortable="true">Role</th>
+                            <th data-field="EmployeeID" data-sortable="true" data-formatter="ActionEdit">Edit</th>
                         </tr>
                     </thead>
                 </table>
