--- a/PayMe/PayMe/Views/EmployeePayRate/AddPayRate.cshtml
+++ b/PayMe/PayMe/Views/EmployeePayRate/AddPayRate.cshtml
@@ -16,7 +16,7 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">Enter Employee PayRate</div>
-    @*<div class="panel-heading" style="font-weight:bold;">@ViewBag.ExpenseSummaryName</div>*@
+    <div class="panel-heading" >Employee Name: @ViewBag.EmployeeName</div>
     <div class="panel-body">
         @if (TempData["Message"] != null)
             {
