--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -290,6 +290,7 @@
         </footer>
         <script>
             $(document).ready(function () {
+                debugger;
                 var accountId = @Session["AccountID"]
                 $("#AccountID").val(accountId);
             });
