--- a/PayMe/PayMe/Views/Employee/Register.cshtml
+++ b/PayMe/PayMe/Views/Employee/Register.cshtml
@@ -25,7 +25,7 @@
 
         @if (TempData["MessageRegistration"] != null)
             {
-            <p class="alert alert-danger" id="successMessage">@TempData["MessageRegistration"]</p>
+            <p class="alert alert-success" id="successMessage">@TempData["MessageRegistration"]</p>
         }
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -127,7 +127,7 @@
                         @Html.DropDownList("fkManagerId", ViewBag.Managers as SelectList, "--Please select--"
 , new { @class = "form-control input-lg" })
 
-                        @Html.ValidationMessageFor(model => model.fkManagerId)
+                        @Html.ValidationMessageFor(model => model.fkManagerId,"", new { @class = "text-danger" })
                        
                     </div>
                     <div class="col-lg-4">
@@ -169,13 +169,13 @@
                 @Html.ValidationMessageFor(model => model.PassportIssuedBy, "", new { @class = "text-danger" })
             </div>
             <div class="col-lg-4">
-                @Html.LabelFor(model => model.PassportIssuedOn, htmlAttributes: new { @class = "control-label manadatory" })
-                @Html.TextBoxFor(model => model.PassportIssuedOn, new { @class = "form-control",})
+                @Html.LabelFor(model => model.PassportIssuedOn, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
+                @Html.TextBoxFor(model => model.PassportIssuedOn, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PassportIssuedOn, "", new { @class = "text-danger" })
             </div>
             <div class="col-lg-4">
-                @Html.LabelFor(model => model.PassportExpireOn, htmlAttributes: new { @class = "control-label manadatory" }) 
-                @Html.TextBoxFor(model => model.PassportExpireOn, new { @class = "form-control"})
+                @Html.LabelFor(model => model.PassportExpireOn, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
+                @Html.TextBoxFor(model => model.PassportExpireOn, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PassportExpireOn, "", new { @class = "text-danger" })
             </div>
             </div>
@@ -233,7 +233,7 @@
     <div class="row">
         <div class="col-lg-4">
             <input type="submit" id="create" value="Create" class="btn btn-md btn-primary" />
-            <input type="submit" id="update" value="Update Value" onclick="return update()" class="btn btn-md btn-primary" />
+            <input type="submit" id="update" value="Update User" onclick="return update()" class="btn btn-md btn-primary" />
             @Html.ActionLink("Cancel", "Register", "Employee", null, new { @class = "btn btn-md btn-primary" })
 
         </div>
