--- a/PayMe/PayMe/Views/Client/Index.cshtml
+++ b/PayMe/PayMe/Views/Client/Index.cshtml
@@ -17,6 +17,18 @@
         return value == true ? 'Yes' : 'No';
     }
 
+    function ActionEdit(value) {
+        return '<a href="../Client/Edit/' + value + '"><em class="fa fa-pencil" style="font-size:18px;"></a>';
+    }
+    function ActionDelete(value) {
+
+        return '<a onclick="return confirm_click();" href="../Client/Delete/' + value + ' "><em class="fa fa-trash"  style="font-size:18px;color:red"></a>';
+
+    }
+    function confirm_click(value) {
+        return confirm('Are you sure do you want to delete task?');
+    }
+
 </script>
 <div class="row">
     <ol class="breadcrumb">
@@ -31,7 +43,7 @@
 
 <div style="float:right;"><a href="~/Client/Create" class="btn btn-md btn-primary">Create</a></div>
 
-<div class="row">
+<div  class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">Clients</div>
@@ -48,6 +60,8 @@
                             <th data-field="PrimaryContact" data-sortable="true">Primary Contact</th>
                             <th data-field="LocationInfo" data-sortable="true">Location Info</th>
                             <th data-field="IsActive" data-sortable="true" data-formatter="YesNoFormater">Is Active</th>
+                            <th data-field="ID" data-sortable="true" data-formatter="ActionEdit">Edit</th>
+                            <th data-field="ID" data-sortable="true" data-formatter="ActionDelete">Delete</th>
                         </tr>
                     </thead>
                 </table>
