--- a/PayMe/PayMe/Views/Client/Index.cshtml
+++ b/PayMe/PayMe/Views/Client/Index.cshtml
@@ -26,7 +26,7 @@
 
     }
     function confirm_click(value) {
-        return confirm('Are you sure do you want to delete task?');
+        return confirm('Are you sure do you want to delete the Client?');
     }
 
 </script>
